--- a/recommendation system/recommendation system.csproj
+++ b/recommendation system/recommendation system.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reddit.cs" />
+    <Compile Include="SlopeOne.cs" />
     <Compile Include="Task3.cs" />
   </ItemGroup>
   <ItemGroup>
